--- a/week4/commerce/commerce/auctions/templates/auctions/category/includeInactive.html
+++ b/week4/commerce/commerce/auctions/templates/auctions/category/includeInactive.html
@@ -1,8 +1,8 @@
-{% extends "auctions/layout.html" %}
+{% extends 'auctions/category/layout.html' %}
 
-{% block body %}
-    <h2>Active Listings</h2>
+{% block pageHead %}Inactive Listings{% endblock %}\
 
+{% block listings %}
     <div class="container">
         <div class="row align-items-start">
             {% for listing in listings %}
@@ -41,5 +41,4 @@
             {% endfor %}
         </div>
     </div>
-
 {% endblock %}
