--- a/week4/commerce/commerce/auctions/templates/auctions/category/type.html
+++ b/week4/commerce/commerce/auctions/templates/auctions/category/type.html
@@ -1,6 +1,6 @@
 {% extends 'auctions/category/layout.html' %}
 
-{% block pageHead %}All Listings{% endblock %} 
+{% block pageHead %}{{ category }}{% endblock %}
 
 {% block listings %}
     <div class="container">
