--- a/week4/commerce/commerce/auctions/templates/auctions/index.html
+++ b/week4/commerce/commerce/auctions/templates/auctions/index.html
@@ -4,7 +4,7 @@
     <h2>Active Listings</h2>
 
     <div class="container">
-        <div class="row align-items-start">
+        <div>
             {% for listing in listings %}
                 <a style="text-decoration: none;" href="listing_page/{{ listing.id }}">
                     <div class="row border p-3 mb-5">
