--- a/week4/commerce/commerce/auctions/templates/auctions/listing.html
+++ b/week4/commerce/commerce/auctions/templates/auctions/listing.html
@@ -40,7 +40,7 @@
                     {% if listing.category is None %}
                         No Category Listed
                     {% else %}
-                        {{ listing.category }}
+                        {{ listing.category.name }}
                     {% endif %}
                 </span>
             </li>
