--- a/week4/commerce/commerce/auctions/templates/auctions/category.html
+++ b/week4/commerce/commerce/auctions/templates/auctions/category.html
@@ -4,7 +4,14 @@
     <h2>Category</h2>
 
     <ul>
-        <a style="text-decoration: none;" href="{% url 'all' %}"><li>Show All</li></a>
-        <a style="text-decoration: none;" href="{% url 'includeInactive' %}"><li>Show Inactive Auctions</li></a>
+        {% if user.is_authenticated %}
+            <a style="text-decoration: none;" href="{% url 'all' %}"><li>Your Listings</li></a>
+        {% endif %}
+        <a style="text-decoration: none;" href="{% url 'all' %}"><li>Show All Listings</li></a>
+        <a style="text-decoration: none;" href="{% url 'includeInactive' %}"><li>Show Inactive Listings</li></a>
+        {% for category in categories %}
+            <a style="text-decoration: none;" href="category/{{ category.name }}"><li>{{ category.name }}</li></a>
+        {% empty %}
+        {% endfor %}
     </ul>
 {% endblock %}
