--- a/week4/commerce/commerce/auctions/templates/auctions/category/type.html
+++ b/week4/commerce/commerce/auctions/templates/auctions/category/type.html
@@ -1,56 +1,4 @@
-{% extends 'auctions/category/layout.html' %}
+{% extends 'auctions/category/all.html' %}
 
 {% block pageHead %}{{ category }}{% endblock %}
 
-{% block listings %}
-    <div class="container">
-        <div>
-            {% for listing in listings %}
-                <a style="text-decoration: none;" href="listing_page/{{ listing.id }}">
-                    <div class="row border p-3 mb-5">
-                        <img class="border" src="{{ listing.image_link }}" alt="{{ listing.item_name }}" height="200">
-                        <div style="color: black" class="col">
-                            <h3>{{ listing.item_name }}</h3>
-                            <p>{{ listing.item_description }}</p>
-                            <h5>Starting Price: ${{ listing.start_bid }}</h5>
-                            {% if not listing.is_active %}
-                                {% if winner %}
-                                    <h2 style="color: red;">Sold to {{ item.1 }} for ${{ item.2 }}</h2>
-                                {% else %}
-                                    {% for item in listing_info %}
-                                        {% if listing.id in item %}
-                                            <h2 style="color: red;">Sold to {{ item.1 }} for ${{ item.2 }}</h2>
-                                        {% endif %}
-                                    {% endfor %}
-                                {% endif %}
-                            {% else %}
-                                <div class="row p-3">
-                                    {% if user.is_authenticated %}
-                                        <div class="pr-3">
-                                            <form action="{% url 'addToWatchlist' %}" method="post">
-                                                {% csrf_token %}
-                                                <input type="hidden" name="item_id" value="{{ listing.id }}">
-                                                <input class="btn btn-primary" type="submit" value="Add to Watchlist">
-                                            </form>
-                                        </div>
-                                        {% if user == listing.created_by %}
-                                            <div>
-                                                <form action="{% url 'closeAuction' %}" method="post">
-                                                    {% csrf_token %}
-                                                    <input type="hidden" name="item_id" value="{{ listing.id }}">
-                                                    <input class="btn btn-primary" type="submit" value="Close">
-                                                </form>
-                                            </div>
-                                        {% endif %}
-                                    {% endif %}
-                                </div>
-                            {% endif %}
-                        </div>
-                    </div>
-                </a>
-            {% empty %}
-                <div>No listings currently</div>
-            {% endfor %}
-        </div>
-    </div>
-{% endblock %}
