--- a/week4/commerce/commerce/auctions/templates/auctions/category.html
+++ b/week4/commerce/commerce/auctions/templates/auctions/category.html
@@ -5,7 +5,7 @@
 
     <ul>
         {% if user.is_authenticated %}
-            <a style="text-decoration: none;" href="{% url 'all' %}"><li>Your Listings</li></a>
+            <a style="text-decoration: none;" href="{% url 'yourListings' %}"><li>Your Listings</li></a>
         {% endif %}
         <a style="text-decoration: none;" href="{% url 'all' %}"><li>Show All Listings</li></a>
         <a style="text-decoration: none;" href="{% url 'includeInactive' %}"><li>Show Inactive Listings</li></a>
