--- a/week4/commerce/commerce/auctions/templates/auctions/index.html
+++ b/week4/commerce/commerce/auctions/templates/auctions/index.html
@@ -3,11 +3,11 @@
 {% block body %}
     <h2>Active Listings</h2>
 
-    <div class="container">
+    <div class="container-fluid m-0">
         <div>
             {% for listing in listings %}
                 <a style="text-decoration: none;" href="listing_page/{{ listing.id }}">
-                    <div class="row border p-3 mb-5">
+                    <div class="row border p-3 m-3">
                         <img class="border" src="{{ listing.image_link }}" alt="{{ listing.item_name }}" height="200">
                         <div style="color: black" class="col">
                             <h3>{{ listing.item_name }}</h3>
