--- a/week7/project4/network/templates/network/index.html
+++ b/week7/project4/network/templates/network/index.html
@@ -26,6 +26,14 @@
         {% endif %}
 
         <div id="all_posts" class="m-5 p-3"></div>
+        <div class="d-flex justify-content-between">
+            <div id="prev_container">
+                <button id="prev_btn" class="btn btn-primary">Previous</button>
+            </div>
+            <div id="next_container">
+                <button id="next_btn" class="btn btn-primary">Next</button>
+            </div>
+        </div>
         <script src="{% static 'network/index.js' %}"></script>
     </div>
 {% endblock %}
