--- a/week7/project4/network/templates/network/profile.html
+++ b/week7/project4/network/templates/network/profile.html
@@ -10,6 +10,12 @@
         <input id="currentuser" type="hidden" value="">
         <input id="profileuser" type="hidden" value="{{ profile_user.username }}">
     {% endif %}
+
+    {% if user.is_authenticated %}
+        <input id="loggedin" type="hidden" value="true">
+    {% else %}
+        <input id="loggedin" type="hidden" value="false">
+    {% endif %}
     
     
     <div class="m-3 p-3">
@@ -23,8 +29,28 @@
         <h6>{{profile_user.email}}</h6>
         <h5>Followers: {{ profile_user.followers.count }}</h5>
         <h5>Following: {{ profile_user.following.count }}</h5>
+            
+        <button id="follow_btn" class="btn btn-primary">Follow</button>
+
+        <div id="formdiv" class="m-5 p-3 border rounded shadow-sm" style="display: none;">
+            <form>
+                <label><h4>Edit Post</h4></label>
+                {% csrf_token %}
+                {{ form.content }}
+                {{ form.errors }}
+                <input id="postbtn" type="submit" class="btn btn-primary mt-3 px-4" value="Save">
+            </form>
+        </div>
 
         <div id="profile_posts" class="m-5 p-3"></div>
+        <div class="d-flex justify-content-between">
+            <div id="prev_container">
+                <button id="prev_btn" class="btn btn-primary">Previous</button>
+            </div>
+            <div id="next_container">
+                <button id="next_btn" class="btn btn-primary">Next</button>
+            </div>
+        </div>
         <script src="{% static 'network/profile.js' %}"></script>
     </div>
 {% endblock %}          
