created django form for adding a new transaction

--- a/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/transactions.html
+++ b/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/transactions.html
@@ -28,6 +28,7 @@
                 <option value="income">Income</option>
                 <option value="expense">Expense</option>
                 <option value="savings">Savings</option>
+                <!-- <option class="bg-gray-300" value="add">Add Category</option> -->
             </select>
         </div>
 
