--- a/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/transactions.html
+++ b/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/transactions.html
@@ -3,9 +3,10 @@
 {% load static %}
 
 {% block body %}
+    <input type="hidden" id="User" name="User" value="{{ user }}">
     <div class="max-w-2xl mx-auto mt-8 bg-white shadow-lg rounded-lg p-6">
     <h2 class="text-2xl font-bold mb-4 text-gray-800 justify-self-center" id="transactionHeading" style="cursor: pointer;">Add Transaction</h2>
-    <form method="POST" action="" class="space-y-4">
+    <form class="space-y-4">
         {% csrf_token %}
 
         <!-- Amount -->
@@ -45,6 +46,9 @@
             </button>
         </div>
     </form>
+</div>
+
+<div id="transactions">
 </div>
 
 <script src="{% static 'transactions.js' %}"></script>
