added edit and delete buttons to transaction divs. Working on deleteion of a transaction...

--- a/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/transactions.html
+++ b/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/transactions.html
@@ -48,7 +48,7 @@
     </form>
 </div>
 
-<div id="transactions">
+<div id="transactions" class="mb-2">
 </div>
 
 <script src="{% static 'transactions.js' %}"></script>
