--- a/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/transactions.html
+++ b/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/transactions.html
@@ -41,7 +41,7 @@
 
         <!-- Submit Button -->
         <div>
-            <button type="submit" class="w-full bg-indigo-600 text-white font-semibold py-3 px-4 rounded-md hover:bg-indigo-700 transition duration-200">
+            <button type="submit" id="submit-btn" class="w-full bg-indigo-600 text-white font-semibold py-3 px-4 rounded-md hover:bg-indigo-700 transition duration-200">
                 Add Transaction
             </button>
         </div>
