added charts in dashboard

--- a/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/dashboard.html
+++ b/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/dashboard.html
@@ -7,6 +7,17 @@
             <h1 class="text-gray-700 text-xl">Welcome, {{ user }}</h1>
         {% endif %}
     </div>
-    <div style="width: 800px;"><canvas id="finance_pie"></canvas></div>
+    <div class="flex">
+        <div>
+            <div style="height: 100px" class="flex-auto shadow-lg p-3 m-3 rounded-lg bg-gray-300 ">
+                <strong>Total Income: $<span id="total_income"></span></strong><br>
+                <strong>Total Expense: $<span id="total_expense"></span></strong><br>
+                <strong>Total Savings: $<span id="total_savings"></span></strong>
+            </div>
+            <div style="height: 300px; width: 500px;" class="flex-auto shadow-lg p-3 m-3 rounded-lg bg-gray-300"><canvas id="finance_graph_2"></canvas></div>
+        </div>
+        <div style="width: 400px;" class="shadow-lg p-3 m-3 rounded-lg bg-gray-300"><canvas id="finance_graph_1"></canvas></div>
+        
+    </div>    
     <script src="{% static 'dashboard.js' %}"></script>
 {% endblock %}
