--- a/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/transactions.html
+++ b/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/transactions.html
@@ -5,52 +5,107 @@
 {% block body %}
     <input type="hidden" id="User" name="User" value="{{ user }}">
     <div class="max-w-2xl mx-auto mt-8 bg-white shadow-lg rounded-lg p-6">
-    <h2 class="text-2xl font-bold mb-4 text-gray-800 justify-self-center" id="transactionHeading" style="cursor: pointer;">Add Transaction</h2>
-    <form class="space-y-4" method="post">
-        {% csrf_token %}
-
-        <!-- Amount -->
-        <div>
-            <label for="amount" class="block text-sm font-medium text-gray-700">Amount</label>
-            <input type="number" name="amount" id="amount" step="0.01" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border" placeholder="Enter amount" required>
+        <div class="flex justify-between">
+            <h2 class="text-2xl font-bold mb-4 text-gray-800 justify-self-center" id="transactionHeading" style="cursor: pointer;">Add Transaction</h2>
+            <h2 class="text-2xl font-bold mb-4 text-gray-800 justify-self-center" id="transactionSearchHeading" style="cursor: pointer;">Search Transaction</h2>
         </div>
 
-        <!-- Description -->
-        <div>
-            <label for="description" class="block text-sm font-medium text-gray-700">Description</label>
-            <input type="text" name="description" id="description" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border" placeholder="Enter description" required>
-        </div>
+        <!-- Add Transaction Form -->
+        <form class="space-y-4" method="post" id="add_form">
+            {% csrf_token %}
 
-        <!-- Category -->
-        <div>
-            <label for="category" class="block text-sm font-medium text-gray-700">Category</label>
-            <select name="category" id="category" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border" required>
-                <option value="">Select a category</option>
-                <option value="income">Income</option>
-                <option value="expense">Expense</option>
-                <!-- <option value="savings">Savings</option> -->
-                <!-- <option class="bg-gray-300" value="add">Add Category</option> -->
-            </select>
-        </div>
+            <!-- Amount -->
+            <div>
+                <label for="amount" class="block text-sm font-medium text-gray-700">Amount</label>
+                <input type="number" name="amount" id="amount" step="0.01" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border" placeholder="Enter amount" required>
+            </div>
 
-        <!-- Date -->
-        <div>
-            <label for="date" class="block text-sm font-medium text-gray-700">Date</label>
-            <input type="date" name="date" id="date" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border" required>
-        </div>
+            <!-- Description -->
+            <div>
+                <label for="description" class="block text-sm font-medium text-gray-700">Description</label>
+                <input type="text" name="description" id="description" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border" placeholder="Enter description" required>
+            </div>
 
-        <!-- Submit Button -->
-        <div>
-            <button type="submit" id="submit-btn" class="w-full bg-indigo-600 text-white font-semibold py-3 px-4 rounded-md hover:bg-indigo-700 transition duration-200">
-                Add Transaction
-            </button>
-        </div>
-    </form>
-</div>
+            <!-- Category -->
+            <div>
+                <label for="category" class="block text-sm font-medium text-gray-700">Category</label>
+                <select name="category" id="category" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border" required>
+                    <option value="">Select a category</option>
+                    <option value="income">Income</option>
+                    <option value="expense">Expense</option>
+                    <!-- <option value="savings">Savings</option> -->
+                    <!-- <option class="bg-gray-300" value="add">Add Category</option> -->
+                </select>
+            </div>
 
-<div id="transactions" class="mb-2">
-</div>
+            <!-- Date -->
+            <div>
+                <label for="date" class="block text-sm font-medium text-gray-700">Date</label>
+                <input type="date" name="date" id="date" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border" required>
+            </div>
 
-<script src="{% static 'transactions.js' %}"></script>
+            <!-- Submit Button -->
+            <div>
+                <button type="submit" id="submit-btn" class="w-full bg-indigo-600 text-white font-semibold py-3 px-4 rounded-md hover:bg-indigo-700 transition duration-200">
+                    Add Transaction
+                </button>
+            </div>
+        </form>
+
+        <!-- Search Transaction Form  -->
+        <form class="space-y-4" method="post" id="search_form">
+            {% csrf_token %}
+
+            <!-- Amount -->
+            <div>
+                <label for="amount" class="block text-sm font-medium text-gray-700">Amount</label>
+                <div class="flex">
+                    
+                    <input type="number" name="amount" id="amount" step="0.01" class="mt-1 mr-3 block w-75 rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border" placeholder="Enter amount">
+                    <div class="flex">
+                        <input id="=" class="block mr-3 rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border" type="button" value="=">
+                        <input id="<=" class="block mr-3 rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border" type="button" value="<=">
+                        <input id=">=" class="block mr-3 rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border" type="button" value=">=">
+                    </div>
+                </div>
+            </div>
+
+            <!-- Description -->
+            <div>
+                <label for="description" class="block text-sm font-medium text-gray-700">Description</label>
+                <input type="text" name="description" id="description" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border" placeholder="Enter description">
+            </div>
+
+            <!-- Category -->
+            <div>
+                <label for="category" class="block text-sm font-medium text-gray-700">Category</label>
+                <select name="category" id="category" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border">
+                    <option value="">Select a category</option>
+                    <option value="income">Income</option>
+                    <option value="expense">Expense</option>
+                    <!-- <option value="savings">Savings</option> -->
+                    <!-- <option class="bg-gray-300" value="add">Add Category</option> -->
+                </select>
+            </div>
+
+            <!-- Date -->
+            <div>
+                <label for="date" class="block text-sm font-medium text-gray-700">Date</label>
+                <input type="date" name="date" id="date" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border">
+            </div>
+
+            <!-- Submit Button -->
+            <div>
+                <button type="submit" id="search_form_submit" class="w-full bg-indigo-600 text-white font-semibold py-3 px-4 rounded-md hover:bg-indigo-700 transition duration-200">
+                    Search Transaction
+                </button>
+            </div>
+        </form>
+    </div>
+
+    <div id="transactions" class="mb-2">
+    </div>
+
+    <script src="{% static 'transactions.js' %}"></script>
 
 {% endblock %}
