search transaction fully functional

--- a/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/dashboard.html
+++ b/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/dashboard.html
@@ -10,9 +10,9 @@
     <div class="flex">
         <div>
             <div style="height: 100px" class="flex-auto shadow-lg p-3 m-3 rounded-lg bg-gray-300 ">
-                <strong>Total Income: $<span id="total_income"></span></strong><br>
-                <strong>Total Expense: $<span id="total_expense"></span></strong><br>
-                <strong>Total Savings: $<span id="total_savings"></span></strong>
+                <strong>Total Income: <span class="text-green-800" id="total_income"></span></strong><br>
+                <strong>Total Expense: <span class="text-red-600" id="total_expense"></span></strong><br>
+                <strong>Total Savings: <span class="text-green-800" id="total_savings"></span></strong>
             </div>
             <div style="height: 300px; width: 500px;" class="flex-auto shadow-lg p-3 m-3 rounded-lg bg-gray-300"><canvas id="finance_graph_2"></canvas></div>
         </div>
