--- a/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/transactions.html
+++ b/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/transactions.html
@@ -61,7 +61,7 @@
                 <label for="amount" class="block text-sm font-medium text-gray-700">Amount</label>
                 <div class="flex">
                     
-                    <input type="number" name="amount" id="amount" step="0.01" class="mt-1 mr-3 block w-75 rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border" placeholder="Enter amount">
+                    <input type="number" name="search_amount" id="search_amount" step="0.01" class="mt-1 mr-3 block w-75 rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border" placeholder="Enter amount">
                     <div class="flex">
                         <input id="=" class="block mr-3 rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border" type="button" value="=">
                         <input id="<=" class="block mr-3 rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border" type="button" value="<=">
@@ -73,13 +73,13 @@
             <!-- Description -->
             <div>
                 <label for="description" class="block text-sm font-medium text-gray-700">Description</label>
-                <input type="text" name="description" id="description" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border" placeholder="Enter description">
+                <input type="text" name="search_description" id="search_description" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border" placeholder="Enter description">
             </div>
 
             <!-- Category -->
             <div>
                 <label for="category" class="block text-sm font-medium text-gray-700">Category</label>
-                <select name="category" id="category" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border">
+                <select name="search_category" id="search_category" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border">
                     <option value="">Select a category</option>
                     <option value="income">Income</option>
                     <option value="expense">Expense</option>
@@ -91,7 +91,7 @@
             <!-- Date -->
             <div>
                 <label for="date" class="block text-sm font-medium text-gray-700">Date</label>
-                <input type="date" name="date" id="date" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border">
+                <input type="date" name="search_date" id="search_date" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-3 border">
             </div>
 
             <!-- Submit Button -->
