working on pagination

--- a/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/layout.html
+++ b/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/layout.html
@@ -52,7 +52,7 @@
                         {% endif %}
 
                         <div id="dropdownMenu" class="hidden absolute right-0 mt-2 w-48 rounded-md shadow-lg bg-white py-1 ring-1 ring-black ring-opacity-5">
-                            <div class="block px-4 py-2 text-sm text-gray-700 bg-gray-200">{{ user }}</div>
+                            <div class="block px-4 py-2 h-full text-sm text-gray-700 bg-gray-200">{{ user }}</div>
                             <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Settings</a>
                             <a href="{% url 'logout' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Sign out</a>
                         </div>
