--- a/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/transactions.html
+++ b/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/transactions.html
@@ -106,6 +106,11 @@
     <div id="transactions" class="mb-2">
     </div>
 
+    <div class="flex justify-between m-4" id="pageNav">
+        <button ><</button>
+        <button>></button>
+    </div>
+
     <script src="{% static 'transactions.js' %}"></script>
 
 {% endblock %}
