working on pagination page nav buttons added

--- a/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/transactions.html
+++ b/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/transactions.html
@@ -107,8 +107,8 @@
     </div>
 
     <div class="flex justify-between m-4" id="pageNav">
-        <button ><</button>
-        <button>></button>
+        <button id="prevPage" class="bg-gray-200 shadow-sm px-3 py-2 text-2xl rounded-lg hover:shadow-lg hover:bg-gray-300"><</button>
+        <button id="nextPage" class="bg-gray-200 shadow-sm px-3 py-2 text-2xl rounded-lg hover:shadow-lg hover:bg-gray-300">></button>
     </div>
 
     <script src="{% static 'transactions.js' %}"></script>
