--- a/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/dashboard.html
+++ b/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/dashboard.html
@@ -7,8 +7,8 @@
             <h1 class="text-gray-700 text-xl">Welcome, {{ user }}</h1>
         {% endif %}
     </div>
-    <div class="flex">
-        <div>
+    <div class="flex sm:flex-col">
+        <div clss="sm:flex-col">
             <div style="height: 100px" class="flex-auto shadow-lg p-3 m-3 rounded-lg bg-gray-300 ">
                 <strong>Total Income: <span class="text-green-800" id="total_income"></span></strong><br>
                 <strong>Total Expense: <span class="text-red-600" id="total_expense"></span></strong><br>
