--- a/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/layout.html
+++ b/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/layout.html
@@ -59,13 +59,13 @@
                     </div>
 
                     <!-- Mobile Menu Button -->
-                    <div class="sm:hidden ml-2">
+                    <!-- <div class="sm:hidden ml-2">
                         <button id="mobileToggle" class="p-2 text-gray-400 hover:text-white hover:bg-gray-700 rounded-md focus:outline-none">
                             <svg class="h-6 w-6" stroke="currentColor" fill="none" stroke-width="1.5">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
                             </svg>
                         </button>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
