--- a/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/layout.html
+++ b/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/layout.html
@@ -23,7 +23,7 @@
                 <!-- Left section -->
                 <div class="flex items-center">
                     <img src="{% static 'financial-profit.png' %}" class="h-8 w-auto" alt="Logo">
-                    <div class="text-lg text-gray-300 m-2">Finance Tracker</div>
+                    <a href="{% url 'dashboard' %}"><div class="text-lg text-gray-300 m-2">Finance Tracker</div></a>
                     <div class="hidden sm:flex sm:ml-6 space-x-4">
                         {% if user.is_authenticated %}
                             <a href="{% url 'dashboard' %}" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm">Dashboard</a>
@@ -53,29 +53,14 @@
 
                         <div id="dropdownMenu" class="hidden absolute right-0 mt-2 w-48 rounded-md shadow-lg bg-white py-1 ring-1 ring-black ring-opacity-5">
                             <div class="block px-4 py-2 h-full text-sm text-gray-700 bg-gray-200">{{ user }}</div>
-                            <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Settings</a>
+                            <a href="{% url 'dashboard' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Dashboard</a>
+                            <a href="{% url 'transactions' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Transactions</a>
+                            <!-- <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Settings</a> -->
                             <a href="{% url 'logout' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Sign out</a>
                         </div>
                     </div>
-
-                    <!-- Mobile Menu Button -->
-                    <!-- <div class="sm:hidden ml-2">
-                        <button id="mobileToggle" class="p-2 text-gray-400 hover:text-white hover:bg-gray-700 rounded-md focus:outline-none">
-                            <svg class="h-6 w-6" stroke="currentColor" fill="none" stroke-width="1.5">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
-                            </svg>
-                        </button>
-                    </div> -->
                 </div>
             </div>
-        </div>
-
-        <!-- Mobile Menu -->
-        <div id="mobileMenu" class="hidden sm:hidden px-2 pt-2 pb-3 space-y-1">
-            {% if user.is_authenticated %}
-                <a href="{% url 'dashboard' %}" class="block text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md">Dashboard</a>
-                <a href="#" class="block text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md">Transactions</a>
-            {% endif %}
         </div>
     </nav>
 
