working on pagination...

--- a/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/transactions.html
+++ b/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/transactions.html
@@ -109,9 +109,9 @@
     </div>
 
     <!-- Page Nav Buttons -->
-    <div class="flex justify-between m-4" id="pageNav">
-        <button id="prevPage" class="bg-gray-200 shadow-sm px-3 py-2 text-2xl rounded-lg hover:shadow-lg hover:bg-gray-300"><</button>
-        <button id="nextPage" class="bg-gray-200 shadow-sm px-3 py-2 text-2xl rounded-lg hover:shadow-lg hover:bg-gray-300">></button>
+    <div class="flex m-4" id="pageNav">
+        <button id="prevPage" class="mr-auto justify-start shadow-sm px-3 py-2 text-2xl rounded-lg hover:shadow-lg hover:bg-gray-300"><</button>
+        <button id="nextPage" class="ml-auto justify-end shadow-sm px-3 py-2 text-2xl rounded-lg hover:shadow-lg hover:bg-gray-300">></button>
     </div>
 
     <script src="{% static 'transactions.js' %}"></script>
