--- a/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/transactions.html
+++ b/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/transactions.html
@@ -6,7 +6,7 @@
     <div class="max-w-3xl mx-auto p-4 sm:p-6 space-y-4">
         <input type="hidden" id="User" name="User" value="{{ user }}">
         <div class="max-w-3xl mx-auto p-4 sm:p-6 mt-6 bg-white shadow-lg rounded-xl space-y-6">
-            <div class="flex flex-col sm:flex-row justify-between items-center gap-4">
+            <div id="formHeader" class="flex flex-col sm:flex-row justify-between items-center gap-4">
                 <h2 class="text-xl sm:text-2xl font-bold text-gray-800 cursor-pointer hover:text-indigo-600 transition" id="transactionHeading" style="cursor: pointer;">Add Transaction</h2>
                 <h2 class="text-xl sm:text-2xl font-bold text-gray-800 cursor-pointer hover:text-indigo-600 transition" id="transactionSearchHeading" style="cursor: pointer;">Search Transaction</h2>
             </div>
