--- a/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/layout.html
+++ b/FinalProject/PersonalFinanceTracker/Tracker/templates/Tracker/layout.html
@@ -51,11 +51,15 @@
                             </button>
                         {% endif %}
 
-                        <div id="dropdownMenu" class="hidden absolute right-0 mt-2 w-48 rounded-md shadow-lg bg-white py-1 ring-1 ring-black ring-opacity-5">
-                            <div class="block px-4 py-2 h-full text-sm text-gray-700 bg-gray-200">{{ user }}</div>
+                        <div id="dropdownMenu"
+                            class="hidden absolute right-0 mt-2 w-48 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 overflow-hidden">
+
+                            <div class="bg-gray-200 px-4 py-2 text-sm text-gray-800 font-medium border-b border-gray-300">
+                                {{ user }}
+                            </div>
+
                             <a href="{% url 'dashboard' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Dashboard</a>
                             <a href="{% url 'transactions' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Transactions</a>
-                            <!-- <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Settings</a> -->
                             <a href="{% url 'logout' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Sign out</a>
                         </div>
                     </div>
